Added scheduler events
